--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -57,18 +57,11 @@
               <div class="coveo-result-layout-section">
                 <span class="CoveoResultLayout"></span>
               </div>
-              <div class="coveo-sort-section" data-tab="All" >
+              <div class="coveo-sort-section" >
                 <div class="CoveoCustomSortDropdown" data-display-caption="true" data-caption="Sort by:">
                   <span class="CoveoSort" data-sort-criteria="relevancy" data-caption="Relevance"></span>
                   <span class="CoveoSort" data-sort-criteria="date descending" data-caption="Newest"></span>
                   <span class="CoveoSort" data-sort-criteria="date ascending" data-caption="Oldest"></span>
-                </div>
-              </div>
-              <div class="coveo-sort-section" data-tab-not="All">
-                <div class="CoveoCustomSortDropdown" data-display-caption="true" data-caption="Sort by:">
-                  <span class="CoveoSort" data-sort-criteria="relevancy" data-caption="Relevance test"></span>
-                  <span class="CoveoSort" data-sort-criteria="date descending" data-caption="Newest test"></span>
-                  <span class="CoveoSort" data-sort-criteria="date ascending" data-caption="Oldest test"></span>
                 </div>
               </div>
             </div>
